# mcp-qolaba

./: .coveragerc  .env.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  =1.8.0  AGENTS.md  Dockerfile  GEMINI.md  README.md  TASK_OPTIONAL.md  Windows_Notes.md  activate.sh  docker-compose.yml  justfile  main.py  mypy-qolaba.ini  pyproject.toml  run_mypy.py  test_data_conversion.py  test_metrics_integration.py
.claude/: settings.local.json
.gemini/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: run-tests.yml
docs/: API_DOCUMENTATION.md  AUTHENTICATION_PLAN.md  BUSINESS_LOGIC_INTEGRATION.md  PLAN.md  PROJEKTPLAN.md  TASKS.md  TYPE_CHECKING_SETUP.md
docs/development/: STYLEGUIDE.md  TROUBLESHOOTING.md
docs/prompts/: PROMPT_GENERATE_PLAN.md  PROMPT_GENERATE_TASKS.md  PROMPT_IMPLEMENT.md
docs/snippets/: qolaba_tools_examples.mdx
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: qolaba-mcp-server-dashboard.json
prompts/: PROMPT_GENERATE_PLAN.md  PROMPT_GENERATE_TASKS.md  PROMPT_IMPLEMENT.md
scripts/: bump_version.py  run_coverage.py  run_linting.py  validate_types.py
src/fastmcp/contrib/bulk_tool_caller/: bulk_tool_caller.py
src/fastmcp/utilities/: tests.py
src/qolaba_mcp_server/: __main__.py  server.py  server_enhanced.py
src/qolaba_mcp_server/api/: client.py  metrics_router.py
src/qolaba_mcp_server/config/: __init__.py  settings.py
src/qolaba_mcp_server/core/: __init__.py  business_logic.py  logging_config.py  metrics.py
src/qolaba_mcp_server/health/: __init__.py  endpoints.py  health_check.py
src/qolaba_mcp_server/mcp/: __init__.py  responses.py  validation.py
src/qolaba_mcp_server/models/: __init__.py  api_models.py
src/qolaba_mcp_server/server/: health_routes.py
src/qolaba_mcp_server/utils/: __init__.py  env_loader.py
tests/: conftest.py  test_mcp_config.py  test_mock_strategies_example.py
tests/cli/: test_run.py
tests/contrib/: test_bulk_tool_caller.py
tests/experimental/openapi_parser/server/openapi/: test_comprehensive.py
tests/integration/: test_mcp_handlers.py  test_smoke.py
tests/test_data/: error_response.json  text_to_image_request.json  text_to_image_response.json
tests/unit/: test_api_client.py  test_api_client_template.py  test_health_check.py  test_http_client.py  test_logging_system.py  test_mcp_handlers_template.py  test_models_template.py  test_qolaba_settings.py  test_retries.py
tests/utilities/: test_tests.py
tests/utils/: __init__.py  mock_strategies.py
